mostrar listado alumnos

--- a/app/src/main/res/layout/activity_service_list.xml
+++ b/app/src/main/res/layout/activity_service_list.xml
@@ -2,7 +2,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,9 +11,16 @@
         android:text="@string/service_list_title"
         android:id="@+id/textView_title" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/List_Students"
+        android:id="@+id/button_ListStudents" />
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="198dp"
         android:id="@+id/listView_service"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.86" />
 </LinearLayout>
