--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,13 @@
         android:id="@+id/editText_password"
         android:text="pass" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkBox_savePassword"
+        android:id="@+id/checkBox"
+        android:checked="false" />
+
     <Button
         android:layout_width="121dp"
         android:layout_height="wrap_content"
