--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,86 @@
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1"
-    android:id="@+id/layout">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#ff000000">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/server"
-        android:id="@+id/label_server" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_server"
-        android:layout_weight="0.03"
-        android:text="http://192.168.1.52:8080/restful/"
-        />
-        <!--android:text="http://mmyco.co.uk:8180/isis-onlinedemo/restful/"-->
-        <!--android:text="http://192.168.1.52:8080/restful/"-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:id="@+id/textView_user_name" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_user_name"
-        android:text="sven" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="User"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffa2a2a2" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/password"
-        android:id="@+id/textView_password" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Pass"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/editText_user"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffa2a2a2" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText_user"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:maxLines="1"
+        android:maxLength="50"
+        android:textColor="#ffe6e6e6" />
+
+    <EditText
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText_password"
-        android:text="pass" />
+        android:id="@+id/editText_pass"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/editText_user"
+        android:layout_alignEnd="@+id/editText_user"
+        android:maxLines="1"
+        android:maxLength="50"
+        android:textColor="#ffe6e6e6" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/checkBox_savePassword"
-        android:id="@+id/checkBox"
-        android:checked="false" />
+        android:text="Save pass"
+        android:id="@+id/checkBox_save"
+        android:checked="false"
+
+        android:textColor="#ffa2a2a2"
+        android:background="#ff000000"
+        android:layout_below="@+id/editText_pass"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
+
 
     <Button
-        android:layout_width="121dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="@string/button_connect"
+        android:text="Conectar"
         android:id="@+id/button_connect"
-        android:layout_gravity="center_horizontal"
-        android:background="#ff2998ba"
-        android:textColor="#ffe7e2e1" />
-</LinearLayout>
+        android:background="#ffa2a2a2"
+        android:layout_below="@+id/checkBox_save"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        style="@style/AppTheme"
+        android:enabled="true"
+        android:textColor="#ff000000" />
+</RelativeLayout>
