--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ff000000">
+    android:background="@color/Fondo">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffa2a2a2" />
+        android:textColor="@color/Etiquetas" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_below="@+id/editText_user"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffa2a2a2" />
+        android:textColor="@color/Etiquetas" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
         android:layout_alignParentEnd="true"
         android:maxLines="1"
         android:maxLength="50"
-        android:textColor="#ffe6e6e6" />
+        android:textColor="@color/TextoUsuario" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
         android:layout_alignEnd="@+id/editText_user"
         android:maxLines="1"
         android:maxLength="50"
-        android:textColor="#ffe6e6e6" />
+        android:textColor="@color/TextoUsuario" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -63,8 +63,8 @@
         android:id="@+id/checkBox_save"
         android:checked="false"
 
-        android:textColor="#ffa2a2a2"
-        android:background="#ff000000"
+        android:textColor="@color/Etiquetas"
+        android:background="@color/Fondo"
         android:layout_below="@+id/editText_pass"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -76,11 +76,11 @@
         android:layout_height="wrap_content"
         android:text="Conectar"
         android:id="@+id/button_connect"
-        android:background="#ffa2a2a2"
+        android:background="@color/FondoBoton"
         android:layout_below="@+id/checkBox_save"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         style="@style/AppTheme"
         android:enabled="true"
-        android:textColor="#ff000000" />
+        android:textColor="@color/TextoBoton" />
 </RelativeLayout>
