--- a/app/src/main/res/layout/activity_service_list.xml
+++ b/app/src/main/res/layout/activity_service_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:weightSum="1"
-    android:background="#ff000000">
+    android:background="@color/Fondo">
 
     <Button
         android:layout_width="220dp"
@@ -14,7 +14,8 @@
         android:layout_marginTop="20dp"
         android:layout_below="@+id/textView_title"
         android:layout_centerHorizontal="true"
-        android:background="#ffa2a2a2" />
+        android:background="@color/FondoBoton"
+        android:textColor="@color/TextoBoton" />
 
     <Button
         android:layout_width="220dp"
@@ -25,8 +26,10 @@
         android:layout_alignLeft="@+id/button_cursos"
         android:layout_alignStart="@+id/button_cursos"
         android:layout_marginTop="20dp"
-        android:background="#ffa2a2a2"
-        android:enabled="false" />
+        android:background="@color/FondoBoton"
+        android:enabled="false"
+        android:textColor="@color/TextoBoton"
+        />
 
     <Button
         android:layout_width="220dp"
@@ -37,8 +40,10 @@
         android:layout_below="@+id/button_asistencia"
         android:layout_alignLeft="@+id/button_asistencia"
         android:layout_alignStart="@+id/button_asistencia"
-        android:background="#ffa2a2a2"
-        android:enabled="false" />
+        android:background="@color/FondoBoton"
+        android:enabled="false"
+        android:textColor="@color/TextoBoton"
+        />
 
     <Button
         android:layout_width="220dp"
@@ -49,8 +54,10 @@
         android:layout_alignLeft="@+id/button_CargarNotas"
         android:layout_alignStart="@+id/button_CargarNotas"
         android:layout_marginTop="20dp"
-        android:background="#ffa2a2a2"
-        android:enabled="false" />
+        android:background="@color/FondoBoton"
+        android:enabled="false"
+        android:textColor="@color/TextoBoton"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,7 +71,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/button_CargarNotas"
         android:layout_alignEnd="@+id/button_CargarNotas"
-        android:textColor="#ffa2a2a2" />
+        android:textColor="@color/Etiquetas" />
 
     <Button
         android:layout_width="220dp"
@@ -75,7 +82,9 @@
         android:layout_below="@+id/button_ListStudents"
         android:layout_alignLeft="@+id/button_ListStudents"
         android:layout_alignStart="@+id/button_ListStudents"
-        android:background="#ffa2a2a2"
-        android:enabled="false" />
+        android:background="@color/FondoBoton"
+        android:enabled="false"
+        android:textColor="@color/TextoBoton"
+        />
 
 </RelativeLayout>
