--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="fourheads.org.gestionescuelaandroid.activities.AlumnosListActivity">
+    tools:context="fourheads.org.gestionescuelaandroid.activities.AlumnosListActivity"
+    android:background="#ffcdcdcd">
 
     <ListView
         android:layout_width="wrap_content"
@@ -12,5 +13,8 @@
         android:id="@+id/listView_students"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+
+        />
+
 </RelativeLayout>
