Agregar Activity Ayuda

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="TextoUsuario">#ffe6e6e6</color>
     <color name="FondoBoton">#ffa2a2a2</color>
     <color name="TextoBoton">#FF000000</color>
+    <color name="texto_resaltado">#ffe8e515</color>
+    <color name="texto_resaltado2">#ff5dfcff</color>
 
 
 </resources>
