--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,18 +6,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="fourheads.org.readlocaljson.SettingsActivity"
     android:id="@+id/background"
-    android:background="#ff000000">
+    android:background="@color/Fondo">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Restful URL"
+        android:text="servidor"
         android:id="@+id/label1"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffa2a2a2" />
+        android:textColor="@color/Etiquetas" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -28,17 +28,76 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#ffe6e6e6" />
+        android:textColor="@color/TextoUsuario" />
 
     <Button
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Guardar"
         android:id="@+id/button_guardar"
+        android:background="#ffa2a2a2"
+        android:textColor="#ff000000"
+        android:layout_below="@+id/editText2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="puerto"
+        android:id="@+id/label2"
         android:layout_below="@+id/editText_settings_url"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/Etiquetas" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_below="@+id/label2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/editText_settings_url"
         android:layout_alignEnd="@+id/editText_settings_url"
+        android:textColor="@color/TextoUsuario" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="directorio"
+        android:id="@+id/label3"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
-        android:background="#ffa2a2a2"
-        android:textColor="#ff000000" />
+        android:textColor="@color/Etiquetas" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:layout_below="@+id/label3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:textColor="@color/TextoUsuario" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ayuda"
+        android:id="@+id/button_ayuda"
+        android:background="@color/FondoBoton"
+        android:textColor="@color/TextoBoton"
+        android:layout_alignTop="@+id/button_guardar"
+        android:layout_alignRight="@+id/editText2"
+        android:layout_alignEnd="@+id/editText2"
+        android:layout_marginRight="26dp" />
+
+
 </RelativeLayout>
