--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,7 +22,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText_settings_url"
+        android:id="@+id/editText_settings_servidor"
         android:layout_below="@+id/label1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -37,7 +37,7 @@
         android:id="@+id/button_guardar"
         android:background="#ffa2a2a2"
         android:textColor="#ff000000"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/editText_settings_directorio"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" />
 
@@ -47,7 +47,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="puerto"
         android:id="@+id/label2"
-        android:layout_below="@+id/editText_settings_url"
+        android:layout_below="@+id/editText_settings_servidor"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
@@ -56,13 +56,15 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/editText_settings_puerto"
+        android:inputType="number"
         android:layout_below="@+id/label2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText_settings_url"
-        android:layout_alignEnd="@+id/editText_settings_url"
-        android:textColor="@color/TextoUsuario" />
+        android:layout_alignRight="@+id/editText_settings_servidor"
+        android:layout_alignEnd="@+id/editText_settings_servidor"
+        android:textColor="@color/TextoUsuario"
+        android:maxLength="5" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,7 +72,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="directorio"
         android:id="@+id/label3"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/editText_settings_puerto"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp"
@@ -79,12 +81,12 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
+        android:id="@+id/editText_settings_directorio"
         android:layout_below="@+id/label3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
+        android:layout_alignRight="@+id/editText_settings_puerto"
+        android:layout_alignEnd="@+id/editText_settings_puerto"
         android:textColor="@color/TextoUsuario" />
 
     <Button
@@ -95,8 +97,8 @@
         android:background="@color/FondoBoton"
         android:textColor="@color/TextoBoton"
         android:layout_alignTop="@+id/button_guardar"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2"
+        android:layout_alignRight="@+id/editText_settings_directorio"
+        android:layout_alignEnd="@+id/editText_settings_directorio"
         android:layout_marginRight="26dp" />
 
 
